Fix sortable header hover visibility on dark background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,8 @@ th.sortable {
 }
 
 th.sortable:hover {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.15);
+    color: #fff;
 }
 
 /* Searchable select */
